--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,12 @@
 [build.environment]
   NODE_VERSION = "18"
 
+[[plugins]]
+package = "@netlify/plugin-lighthouse"
+
+[[plugins]]
+package = "netlify-plugin-submit-sitemap"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
@@ -30,3 +36,4 @@
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
     Content-Security-Policy = "default-src 'self' https://api.openai.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://api.openai.com;"
+    Cache-Control = "public, max-age=31536000"
